--- a/app/css/main.css
+++ b/app/css/main.css
@@ -52,11 +52,16 @@ body {
 
 a {
   text-decoration: none;
-  cursor: pointer;
-  color: #fff; }
+  cursor: pointer; }
 
 input:focus {
   outline: none; }
+
+input[type='search']::-webkit-search-decoration,
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-results-button,
+input[type='search']::-webkit-search-results-decoration {
+  display: none; }
 
 ::-webkit-input-placeholder {
   color: rgba(60, 60, 60, 0.4); }
@@ -67,28 +72,23 @@ h1, h2, h3 {
   margin: 0; }
 
 .page-wrap {
-  display: flex;
-  flex-direction: column;
   max-width: 1980px;
   height: 100%;
-  margin: 0 auto;
-  position: relative; }
+  margin: 0 auto; }
 
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  height: 100%;
   padding: 0 20px; }
 
 /* Header */
 .header {
   width: 100%;
   height: 100vh;
-  position: relative;
   background-image: url(../img/main-bg.png);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center -60px; }
+  background-position: center center; }
   .header .header-nav {
     height: 94px;
     background-color: #fff; }
@@ -106,8 +106,7 @@ h1, h2, h3 {
         margin: 0;
         padding: 0; }
         .header .nav__menu .menu .menu-item {
-          font-size: 12px;
-          font-weight: 700;
+          list-style-type: none;
           margin: 0px 17px;
           padding: 0 5px;
           border-bottom: 2px solid transparent;
@@ -117,6 +116,11 @@ h1, h2, h3 {
             border-bottom: 2px solid #00C1DA; }
           .header .nav__menu .menu .menu-item:last-child {
             margin-right: 40px; }
+          .header .nav__menu .menu .menu-item a {
+            color: #000;
+            text-decoration: none;
+            font-size: 12px;
+            font-weight: 700; }
       .header .nav__menu .btn {
         display: flex;
         text-transform: uppercase;
@@ -141,9 +145,11 @@ h1, h2, h3 {
 /* Search Input */
 .content {
   width: 100%;
-  position: relative; }
+  height: 80%;
+  position: relative;
+  display: flex;
+  align-items: center; }
   .content .content-title {
-    margin-top: 140px;
     font-size: 100px;
     line-height: 120px;
     font-weight: 700;
@@ -167,7 +173,7 @@ h1, h2, h3 {
       display: flex;
       align-items: center;
       width: 1120px;
-      height: 60px;
+      height: 50px;
       padding: 5px;
       border-radius: 8px;
       background-color: #fff;
@@ -177,7 +183,11 @@ h1, h2, h3 {
         display: flex;
         flex-basis: 20%;
         position: relative;
-        height: 100%; }
+        height: 100%;
+        justify-content: flex-start;
+        align-items: center;
+        padding: 15px 25px;
+        cursor: pointer; }
         .content .content-seach-input .content-search .search-select::before {
           content: '';
           position: absolute;
@@ -186,6 +196,13 @@ h1, h2, h3 {
           padding: 1px 0;
           background-color: rgba(151, 151, 151, 0.2);
           right: 0; }
+        .content .content-seach-input .content-search .search-select::after {
+          content: '';
+          position: absolute;
+          width: 16px;
+          height: 9px;
+          background-image: url(../img/angle-down.svg);
+          right: 20px; }
       .content .content-seach-input .content-search .search-input {
         display: flex;
         flex-basis: 80%; }
@@ -194,16 +211,17 @@ h1, h2, h3 {
           height: 100%;
           border: 0;
           font-size: 14px;
-          color: #1E2D52;
-          margin-left: 35px;
+          color: #000;
+          margin-left: 25px;
           margin-right: 20px; }
   .content .btn {
     display: flex;
     text-transform: uppercase;
     width: 160px;
-    height: 60px;
+    height: 50px;
     font-size: 14px;
     font-weight: 700;
+    letter-spacing: 2px;
     align-items: center;
     justify-content: center;
     cursor: pointer;
@@ -211,9 +229,109 @@ h1, h2, h3 {
     background-color: #00C1DA;
     border: none;
     color: #fff;
-    padding: 20px;
+    padding: 10px;
     transition: all 0.2s ease-in; }
     .content .btn:hover {
       color: #fff;
       background-color: #00C1DA;
       box-shadow: 0 0 50px 5px rgba(0, 193, 218, 0.36); }
+
+#about-us {
+  background-color: #F6F8FA; }
+
+.section {
+  width: 100%;
+  height: 60vh;
+  background-color: #fff;
+  display: flex;
+  align-items: center; }
+  .section .container {
+    display: flex;
+    width: 100%;
+    justify-content: space-between; }
+    .section .container .section-info {
+      display: flex;
+      width: 100%;
+      height: 100%;
+      justify-content: space-between; }
+      .section .container .section-info .section__text {
+        font-size: 14px;
+        line-height: 24px;
+        font-weight: 300;
+        color: #373A39; }
+
+.section__title {
+  font-size: 48px;
+  line-height: 75px;
+  color: #000;
+  font-weight: 700;
+  position: relative;
+  height: 100%;
+  padding-bottom: 15px; }
+  .section__title::after {
+    content: '';
+    position: absolute;
+    height: 4px;
+    width: 60px;
+    background: #00C1DA;
+    left: 0;
+    bottom: 0; }
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #373A39;
+  padding-top: 110px;
+  padding-bottom: 60px; }
+  .footer .footer-info {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    color: #A8A8A8; }
+    .footer .footer-info .info-logo {
+      display: flex;
+      justify-content: center; }
+    .footer .footer-info .social {
+      width: 100%;
+      padding: 72px 0 64px 0; }
+      .footer .footer-info .social .social-menu {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        text-transform: uppercase;
+        letter-spacing: 4px;
+        line-height: 12px;
+        font-weight: 300; }
+        .footer .footer-info .social .social-menu .menu-item {
+          list-style-type: none;
+          padding: 0 28px; }
+          .footer .footer-info .social .social-menu .menu-item a {
+            color: #fff;
+            text-decoration: none;
+            transition: all 0.2s ease-in; }
+            .footer .footer-info .social .social-menu .menu-item a:hover {
+              color: #00C1DA; }
+    .footer .footer-info .info-text {
+      text-align: center;
+      font-size: 14px;
+      line-height: 32px;
+      padding-bottom: 57px; }
+    .footer .footer-info .to-top-arrow {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      cursor: pointer; }
+
+.copy {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  font-size: 12px;
+  font-weight: 500;
+  color: #fff;
+  line-height: 16px;
+  background-color: #2A2C2B; }
