--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -30,10 +30,16 @@ body
 a
 	text-decoration: none
 	cursor: pointer
-	color: $color-white
 
 input:focus
 	outline: none
+
+input[type='search']::-webkit-search-decoration, 
+input[type='search']::-webkit-search-cancel-button, 
+input[type='search']::-webkit-search-results-button, 
+input[type='search']::-webkit-search-results-decoration
+  	display: none;
+
 
 ::-webkit-input-placeholder
    color: rgba(60, 60, 60, 0.4)
