--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -3,28 +3,23 @@
 @import "vars"
 
 .page-wrap
-	display: flex
-	flex-direction: column
 	max-width: 1980px
 	height: 100%
 	margin: 0 auto
-	position: relative
 
 .container 
 	max-width: 1200px
 	margin: 0 auto
-	height: 100%
 	padding: $base-padding
 
 /* Header */
 .header
 	width: 100%
 	height: 100vh
-	position: relative
 	background-image: url(../img/main-bg.png)
 	background-repeat: no-repeat
 	background-size: cover
-	background-position: center -60px
+	background-position: center center
 	.header-nav
 		height: 94px
 		background-color: $color-white
@@ -42,8 +37,7 @@
 				margin: 0
 				padding: 0
 				.menu-item
-					font-size: 12px
-					font-weight: 700
+					list-style-type: none
 					margin: 0px 17px
 					padding: 0 5px
 					border-bottom: 2px solid transparent
@@ -53,6 +47,11 @@
 						border-bottom: 2px solid $color-ocean-blue
 					&:last-child
 						margin-right: 40px
+					a
+						color: $color-black
+						text-decoration: none
+						font-size: 12px
+						font-weight: 700
 			.btn
 				display: flex
 				text-transform: uppercase
@@ -77,9 +76,11 @@
 /* Search Input */
 .content
 	width: 100%
+	height: 80%
 	position: relative
+	display: flex
+	align-items: center
 	.content-title
-		margin-top: 140px
 		font-size: 100px
 		line-height: 120px
 		font-weight: 700
@@ -103,7 +104,7 @@
 			display: flex
 			align-items: center
 			width: 1120px
-			height: 60px
+			height: 50px
 			padding: 5px
 			border-radius: 8px
 			background-color: $color-white
@@ -114,6 +115,10 @@
 				flex-basis: 20%
 				position: relative
 				height: 100%
+				justify-content: flex-start
+				align-items: center
+				padding: 15px 25px
+				cursor: pointer
 				&::before
 					content: ''
 					position: absolute
@@ -122,6 +127,13 @@
 					padding: 1px 0
 					background-color: rgba(151, 151, 151, 0.2)
 					right: 0
+				&::after
+					content: ''
+					position: absolute
+					width: 16px
+					height: 9px
+					background-image: url(../img/angle-down.svg)
+					right: 20px
 			.search-input
 				display: flex
 				flex-basis: 80%
@@ -130,16 +142,17 @@
 					height: 100%
 					border: 0
 					font-size: 14px
-					color: #1E2D52
-					margin-left: 35px
+					color: $color-black
+					margin-left: 25px
 					margin-right: 20px
 	.btn
 		display: flex
 		text-transform: uppercase
 		width: 160px
-		height: 60px
+		height: 50px
 		font-size: 14px
 		font-weight: 700
+		letter-spacing: 2px
 		align-items: center
 		justify-content: center
 		cursor: pointer
@@ -147,9 +160,110 @@
 		background-color: $color-ocean-blue
 		border: none
 		color: $color-white
-		padding: 20px
+		padding: 10px
 		transition: all 0.2s ease-in
 		&:hover
 			color: $color-white
 			background-color: $color-ocean-blue
 			box-shadow: 0 0 50px 5px rgba(0, 193, 218, 0.36)
+
+
+#about-us
+	background-color: #F6F8FA
+
+.section
+	width: 100%
+	height: 60vh
+	background-color: $color-white
+	display: flex
+	align-items: center
+	.container
+		display: flex
+		width: 100%
+		justify-content: space-between
+		.section-info
+			display: flex
+			width: 100%
+			height: 100%
+			justify-content: space-between
+			.section__text
+				font-size: 14px
+				line-height: 24px
+				font-weight: 300
+				color: #373A39
+
+.section__title
+	font-size: 48px
+	line-height: 75px
+	color: $color-black
+	font-weight: 700
+	position: relative
+	height: 100%
+	padding-bottom: 15px
+	&::after
+		content: ''
+		position: absolute
+		height: 4px
+		width: 60px
+		background: #00C1DA;
+		left: 0
+		bottom: 0
+
+.footer
+	display: flex
+	justify-content: center
+	align-items: center
+	background-color:#373A39
+	padding-top: 110px
+	padding-bottom: 60px
+	.footer-info
+		width: 100%
+		display: flex
+		flex-direction: column
+		color: #A8A8A8
+		.info-logo
+			display: flex
+			justify-content: center
+		.social
+			width: 100%
+			padding: 72px 0 64px 0
+			.social-menu
+				display: flex
+				justify-content: space-around
+				align-items: center
+				text-transform: uppercase
+				letter-spacing: 4px
+				line-height: 12px
+				font-weight: 300
+				.menu-item
+					list-style-type: none
+					padding: 0 28px
+					a
+						color: $color-white
+						text-decoration: none
+						transition: all 0.2s ease-in
+						&:hover
+							color: $color-ocean-blue
+		.info-text
+			text-align: center
+			font-size: 14px
+			line-height: 32px
+			padding-bottom: 57px
+		.to-top-arrow
+			width: 100%
+			display: flex
+			justify-content: center
+			cursor: pointer
+
+.copy
+	width: 100%
+	height: 100px
+	display: flex
+	justify-content: center
+	align-items: center
+	height: 100px
+	font-size: 12px
+	font-weight: 500
+	color: $color-white
+	line-height: 16px
+	background-color: #2A2C2B
