--- a/app/css/main.css
+++ b/app/css/main.css
@@ -241,7 +241,6 @@ h1, h2, h3 {
 
 .section {
   width: 100%;
-  height: 60vh;
   background-color: #fff;
   display: flex;
   align-items: center; }
@@ -253,7 +252,9 @@ h1, h2, h3 {
       display: flex;
       width: 100%;
       height: 100%;
-      justify-content: space-between; }
+      justify-content: space-between;
+      margin-top: 152px;
+      margin-bottom: 159px; }
       .section .container .section-info .section__text {
         font-size: 14px;
         line-height: 24px;
@@ -276,6 +277,136 @@ h1, h2, h3 {
     background: #00C1DA;
     left: 0;
     bottom: 0; }
+
+.section-info-team {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 90px; }
+  .section-info-team .info-team {
+    display: flex;
+    margin-top: 100px;
+    font-size: 14px;
+    color: #373A39;
+    line-height: 24px; }
+    .section-info-team .info-team__percent {
+      display: flex;
+      flex-direction: column;
+      flex-basis: 36%; }
+      .section-info-team .info-team__percent .percent-item {
+        font-size: 11px;
+        font-weight: 600;
+        line-height: 20px;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        display: flex;
+        justify-content: space-between;
+        color: #000;
+        margin: 14px 30px 14px 0px;
+        padding-top: 4px;
+        position: relative; }
+        .section-info-team .info-team__percent .percent-item:nth-child(1) {
+          margin-top: 0;
+          padding-right: 25px; }
+          .section-info-team .info-team__percent .percent-item:nth-child(1)::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 2px;
+            background-color: #F0F0F0;
+            z-index: 1; }
+          .section-info-team .info-team__percent .percent-item:nth-child(1)::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            width: 90%;
+            height: 2px;
+            z-index: 2;
+            background-color: #000; }
+        .section-info-team .info-team__percent .percent-item:nth-child(2) {
+          padding-right: 65px; }
+          .section-info-team .info-team__percent .percent-item:nth-child(2)::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 2px;
+            background-color: #F0F0F0;
+            z-index: 1; }
+          .section-info-team .info-team__percent .percent-item:nth-child(2)::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            width: 80%;
+            height: 2px;
+            z-index: 2;
+            background-color: #000; }
+        .section-info-team .info-team__percent .percent-item:nth-child(3) {
+          padding-right: 45px; }
+          .section-info-team .info-team__percent .percent-item:nth-child(3)::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 2px;
+            background-color: #F0F0F0;
+            z-index: 1; }
+          .section-info-team .info-team__percent .percent-item:nth-child(3)::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            width: 85%;
+            height: 2px;
+            z-index: 2;
+            background-color: #000; }
+    .section-info-team .info-team__text {
+      flex-basis: 64%; }
+  .section-info-team .info-team-services {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 130px;
+    margin-top: 110px; }
+    .section-info-team .info-team-services .service {
+      display: flex;
+      flex-direction: column;
+      font-size: 14px;
+      padding-left: 80px;
+      position: relative; }
+      .section-info-team .info-team-services .service:nth-child(1)::before {
+        content: '';
+        position: absolute;
+        top: -10px;
+        left: 0;
+        width: 50px;
+        height: 50px;
+        background-image: url(../img/ico-vacancy.svg); }
+      .section-info-team .info-team-services .service:nth-child(2)::before {
+        content: '';
+        position: absolute;
+        top: -10px;
+        left: 0;
+        width: 50px;
+        height: 50px;
+        background-image: url(../img/ico-development.svg); }
+      .section-info-team .info-team-services .service:nth-child(3)::before {
+        content: '';
+        position: absolute;
+        top: -10px;
+        left: 0;
+        width: 50px;
+        height: 50px;
+        background-image: url(../img/ico-design.svg); }
+      .section-info-team .info-team-services .service .service-title {
+        padding-bottom: 14px;
+        line-height: 20px;
+        color: #333333;
+        letter-spacing: 4px; }
+      .section-info-team .info-team-services .service .service-text {
+        line-height: 24px;
+        color: #777777; }
 
 .footer {
   display: flex;
