--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -173,7 +173,6 @@
 
 .section
 	width: 100%
-	height: 60vh
 	background-color: $color-white
 	display: flex
 	align-items: center
@@ -186,6 +185,8 @@
 			width: 100%
 			height: 100%
 			justify-content: space-between
+			margin-top: 152px
+			margin-bottom: 159px
 			.section__text
 				font-size: 14px
 				line-height: 24px
@@ -208,6 +209,140 @@
 		background: #00C1DA;
 		left: 0
 		bottom: 0
+
+.section-info-team
+	width: 100%
+	display: flex
+	flex-direction: column
+	margin-top: 90px
+	.info-team
+		display: flex
+		margin-top: 100px
+		font-size: 14px
+		color: #373A39
+		line-height: 24px
+		&__percent
+			display: flex
+			flex-direction: column
+			flex-basis: 36%
+			.percent-item
+				font-size: 11px
+				font-weight: 600
+				line-height: 20px
+				letter-spacing: 1px
+				text-transform: uppercase
+				display: flex
+				justify-content: space-between
+				color: $color-black
+				margin: 14px 30px 14px 0px
+				padding-top: 4px
+				position: relative
+				&:nth-child(1)
+					margin-top: 0
+					padding-right: 25px
+					&::after
+						content: ''
+						position: absolute
+						top: 0
+						width: 100%
+						height: 2px
+						background-color: #F0F0F0
+						z-index: 1
+					&::before
+						content: ''
+						position: absolute
+						top: 0
+						width: 90%
+						height: 2px
+						z-index: 2
+						background-color: $color-black
+				&:nth-child(2)
+					padding-right: 65px
+					&::after
+						content: ''
+						position: absolute
+						top: 0
+						width: 100%
+						height: 2px
+						background-color: #F0F0F0
+						z-index: 1
+					&::before
+						content: ''
+						position: absolute
+						top: 0
+						width: 80%
+						height: 2px
+						z-index: 2
+						background-color: $color-black
+				&:nth-child(3)
+					padding-right: 45px
+					&::after
+						content: ''
+						position: absolute
+						top: 0
+						width: 100%
+						height: 2px
+						background-color: #F0F0F0
+						z-index: 1
+					&::before
+						content: ''
+						position: absolute
+						top: 0
+						width: 85%
+						height: 2px
+						z-index: 2
+						background-color: $color-black
+		&__text
+			flex-basis: 64%
+	.info-team-services
+		width: 100%
+		height: 100%
+		display: flex
+		justify-content: space-between
+		margin-bottom: 130px
+		margin-top: 110px
+		.service
+			display: flex
+			flex-direction: column
+			font-size: 14px
+			padding-left: 80px
+			position: relative
+			&:nth-child(1)
+				&::before
+					content: ''
+					position: absolute
+					top: -10px
+					left: 0
+					width: 50px
+					height: 50px
+					background-image: url(../img/ico-vacancy.svg)
+			&:nth-child(2)
+				&::before
+					content: ''
+					position: absolute
+					top: -10px
+					left: 0
+					width: 50px
+					height: 50px
+					background-image: url(../img/ico-development.svg)
+			&:nth-child(3)
+				&::before
+					content: ''
+					position: absolute
+					top: -10px
+					left: 0
+					width: 50px
+					height: 50px
+					background-image: url(../img/ico-design.svg)
+			.service-title
+				padding-bottom: 14px
+				line-height: 20px
+				color: #333333
+				letter-spacing: 4px
+			.service-text
+				line-height: 24px
+				color: #777777
+
 
 .footer
 	display: flex
