--- a/app/css/vacancy.css
+++ b/app/css/vacancy.css
@@ -345,7 +345,7 @@ h1, h2, h3 {
 .page-wrap {
   max-width: 1980px;
   width: 100%;
-  overflow: hidden; }
+  position: relative; }
 
 .container {
   max-width: 1200px;
@@ -525,18 +525,20 @@ h1, h2, h3 {
   .section .container {
     display: flex;
     width: 100%;
+    height: 100%;
     justify-content: space-between;
-    margin: 20px auto; }
+    margin: 20px auto;
+    position: relative;
+    overflow: hidden; }
     .section .container .filters-box {
+      position: absolute;
       width: 310px;
-      height: 400px;
-      position: static;
-      margin-left: 0px;
-      top: 0px;
-      color: #fff;
+      height: 700px;
+      color: #000;
       text-align: center;
-      background-color: #000; }
+      background-color: #F3F3F3; }
     .section .container .card-box-container {
+      margin-left: 336px;
       width: 100%;
       height: 100%;
       display: flex;
@@ -546,7 +548,35 @@ h1, h2, h3 {
         padding: 15px;
         margin: 0 0 26px 38px;
         cursor: pointer;
-        border: 1px solid #909090; }
+        border: .5px solid #909090; }
         .section .container .card-box-container .card-box-item .card-box-row {
           display: flex;
-          justify-content: space-between; }
+          justify-content: space-between;
+          font-size: 20px;
+          font-weight: 400;
+          line-height: 23px;
+          padding: 10px 25px 10px 0; }
+          .section .container .card-box-container .card-box-item .card-box-row__title {
+            color: #00C1DA; }
+          .section .container .card-box-container .card-box-item .card-box-row__city, .section .container .card-box-container .card-box-item .card-box-row__description, .section .container .card-box-container .card-box-item .card-box-row__date {
+            font-size: 12px;
+            color: #909090;
+            line-height: 14px;
+            overflow: hidden;
+            margin: 0;
+            max-height: 42px; }
+          .section .container .card-box-container .card-box-item .card-box-row__respond {
+            color: #000;
+            border-bottom: 1px solid #00C1DA;
+            transition: .5s; }
+            .section .container .card-box-container .card-box-item .card-box-row__respond:hover {
+              color: #00C1DA; }
+
+.fixed {
+  position: fixed !important;
+  top: 0; }
+
+.bottom {
+  position: absolute !important;
+  bottom: 0 !important;
+  top: auto !important; }
