--- a/app/sass/vacancy.sass
+++ b/app/sass/vacancy.sass
@@ -7,7 +7,7 @@
 .page-wrap
 	max-width: 1980px
 	width: 100%
-	overflow: hidden
+	position: relative
 
 .container 
 	max-width: 1200px
@@ -180,7 +180,7 @@
 					&:hover
 						background-color: $color-ocean-blue
 						color: $color-black
-						
+
 .section
 	width: 100%
 	background-color: $color-white
@@ -189,18 +189,20 @@
 	.container
 		display: flex
 		width: 100%
+		height: 100%
 		justify-content: space-between
 		margin: 20px auto
+		position: relative
+		overflow: hidden
 		.filters-box
+			position: absolute
 			width: 310px
-			height: 400px
-			position: static
-			margin-left: 0px
-			top: 0px
-			color: $color-white
+			height: 700px
+			color: $color-black
 			text-align: center
-			background-color: $color-black
+			background-color: #F3F3F3
 		.card-box-container
+			margin-left: 336px
 			width: 100%
 			height: 100%
 			display: flex
@@ -210,7 +212,35 @@
 				padding: 15px
 				margin: 0 0 26px 38px
 				cursor: pointer
-				border: 1px solid #909090
+				border: .5px solid #909090
 				.card-box-row
 					display: flex
 					justify-content: space-between
+					font-size: 20px
+					font-weight: 400
+					line-height: 23px
+					padding: 10px 25px 10px 0
+					&__title
+						color: $color-ocean-blue
+					&__city, &__description, &__date
+						font-size: 12px
+						color: #909090
+						line-height: 14px
+						overflow: hidden
+						margin: 0
+						max-height: 42px
+					&__respond
+						color: $color-black
+						border-bottom: 1px solid $color-ocean-blue
+						transition: .5s
+						&:hover
+							color: $color-ocean-blue
+
+.fixed
+	position: fixed !important
+	top: 0
+
+.bottom
+	position: absolute !important
+	bottom: 0 !important
+	top: auto !important
