--- a/app/css/vacancy.css
+++ b/app/css/vacancy.css
@@ -539,14 +539,55 @@ h1, h2, h3 {
     overflow: hidden; }
     .section .container .filters-box {
       position: absolute;
-      width: 310px;
+      width: 250px;
       height: 700px;
       color: #000;
-      border: 1px solid #000;
       text-align: center;
-      background-color: #F3F3F3; }
+      background-color: #F9F9F9;
+      display: flex;
+      flex-direction: column;
+      padding: 10px; }
+      .section .container .filters-box .filter-row {
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: column;
+        text-align: left;
+        font-size: 12px;
+        font-weight: 400;
+        color: #666;
+        border-bottom: 1px solid #E7E7E7;
+        margin: 6px 0; }
+        .section .container .filters-box .filter-row__title {
+          font-size: 14px;
+          font-weight: 500;
+          color: #000;
+          position: relative;
+          padding: 3px 10px;
+          cursor: pointer; }
+          .section .container .filters-box .filter-row__title:hover {
+            background-color: rgba(0, 0, 0, 0.05); }
+          .section .container .filters-box .filter-row__title:after {
+            content: '';
+            position: absolute;
+            right: 6px;
+            top: 6px;
+            width: 12px;
+            height: 12px;
+            background: url(../img/down-arrow.svg);
+            background-size: cover;
+            background-position: center center; }
+        .section .container .filters-box .filter-row .filter-ul {
+          margin: 0;
+          padding: 5px 15px;
+          list-style-type: none;
+          text-align: left;
+          cursor: pointer; }
+          .section .container .filters-box .filter-row .filter-ul .filter-li {
+            padding: 0 10px; }
+            .section .container .filters-box .filter-row .filter-ul .filter-li:hover {
+              background-color: rgba(0, 0, 0, 0.05); }
     .section .container .card-box-container {
-      margin-left: 336px;
+      margin-left: 250px;
       width: 100%;
       height: 100%;
       display: flex;
