--- a/app/sass/vacancy.sass
+++ b/app/sass/vacancy.sass
@@ -197,14 +197,55 @@
 		overflow: hidden
 		.filters-box
 			position: absolute
-			width: 310px
+			width: 250px
 			height: 700px
 			color: $color-black
-			border: 1px solid $color-black
 			text-align: center
-			background-color: #F3F3F3
+			background-color: #F9F9F9
+			display: flex
+			flex-direction: column
+			padding: 10px
+			.filter-row
+				display: flex
+				justify-content: flex-start
+				flex-direction: column
+				text-align: left
+				font-size: 12px
+				font-weight: 400
+				color: #666
+				border-bottom: 1px solid #E7E7E7
+				margin: 6px 0
+				&__title
+					font-size: 14px
+					font-weight: 500
+					color: $color-black
+					position: relative
+					padding: 3px 10px
+					cursor: pointer
+					&:hover
+						background-color: rgba(0,0,0,0.05)
+					&:after
+						content: ''
+						position: absolute
+						right: 6px
+						top: 6px
+						width: 12px
+						height: 12px
+						background: url(../img/down-arrow.svg)
+						background-size: cover
+						background-position: center center
+				.filter-ul
+					margin: 0
+					padding: 5px 15px
+					list-style-type: none
+					text-align: left
+					cursor: pointer
+					.filter-li
+						padding: 0 10px
+						&:hover
+							background-color: rgba(0,0,0,0.05)
 		.card-box-container
-			margin-left: 336px
+			margin-left: 250px
 			width: 100%
 			height: 100%
 			display: flex
