--- a/app/css/vacancy.css
+++ b/app/css/vacancy.css
@@ -591,20 +591,19 @@ h1, h2, h3 {
       display: flex;
       flex-direction: column; }
       .section .container .card-box-container .card-box-item {
-        height: 200px;
+        height: 240px;
         padding: 15px;
         margin: 0 0 26px 38px;
-        cursor: pointer;
         border: .5px solid #909090;
-        position: relative; }
+        position: relative;
+        overflow: hidden; }
         .section .container .card-box-container .card-box-item .card-box-row {
           display: flex;
           justify-content: space-between;
           font-size: 20px;
           font-weight: 400;
           line-height: 23px;
-          padding: 5px 25px 5px 0;
-          position: relative; }
+          padding: 5px 25px 5px 0; }
           .section .container .card-box-container .card-box-item .card-box-row__title {
             color: #00C1DA; }
           .section .container .card-box-container .card-box-item .card-box-row__city, .section .container .card-box-container .card-box-item .card-box-row__description, .section .container .card-box-container .card-box-item .card-box-row__date {
@@ -638,7 +637,10 @@ h1, h2, h3 {
   top: auto !important; }
 
 .p-bottom {
+  display: flex;
+  justify-content: space-between;
   width: 100%;
   position: absolute;
-  bottom: -15px;
-  padding-bottom: 0 !important; }
+  bottom: 0;
+  left: 0;
+  padding: 15px 35px 15px 15px; }
