--- a/app/sass/vacancy.sass
+++ b/app/sass/vacancy.sass
@@ -249,12 +249,12 @@
 			display: flex
 			flex-direction: column
 			.card-box-item
-				height: 200px
+				height: 240px
 				padding: 15px
 				margin: 0 0 26px 38px
-				cursor: pointer
 				border: .5px solid #909090
 				position: relative
+				overflow: hidden
 				.card-box-row
 					display: flex
 					justify-content: space-between
@@ -262,7 +262,6 @@
 					font-weight: 400
 					line-height: 23px
 					padding: 5px 25px 5px 0
-					position: relative
 					&__title
 						color: $color-ocean-blue
 					&__city, &__description, &__date
@@ -296,7 +295,10 @@
 	top: auto !important
 
 .p-bottom
+	display: flex
+	justify-content: space-between
 	width: 100%
 	position: absolute
-	bottom: -15px
-	padding-bottom: 0 !important
+	bottom: 0
+	left: 0
+	padding: 15px 35px 15px 15px
