--- a/app/css/vacancy.css
+++ b/app/css/vacancy.css
@@ -588,6 +588,7 @@ h1, h2, h3 {
       margin-left: 250px;
       width: 100%;
       height: 100%;
+      min-height: 100vh;
       display: flex;
       flex-direction: column; }
       .section .container .card-box-container .card-box-item {
