--- a/app/sass/vacancy.sass
+++ b/app/sass/vacancy.sass
@@ -246,6 +246,7 @@
 			margin-left: 250px
 			width: 100%
 			height: 100%
+			min-height: 100vh
 			display: flex
 			flex-direction: column
 			.card-box-item
