--- a/app/css/vacancy.css
+++ b/app/css/vacancy.css
@@ -398,7 +398,7 @@ h1, h2, h3 {
     align-items: center;
     padding: 15px;
     width: 100%;
-    height: 140px;
+    height: 120px;
     background: #fff;
     -moz-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
     -webkit-box-shadow: 0 5px 5px rgba(0, 0, 0, 0.3);
@@ -409,7 +409,7 @@ h1, h2, h3 {
       font-weight: 500;
       text-decoration: none;
       position: relative;
-      margin: 5px 0; }
+      margin-bottom: 15px; }
 
 /* Header */
 .header {
