--- a/app/sass/vacancy.sass
+++ b/app/sass/vacancy.sass
@@ -44,7 +44,7 @@
 		align-items: center
 		padding: 15px
 		width: 100%
-		height: 140px
+		height: 120px
 		background: $color-white
 		-moz-box-shadow: 0 5px 5px rgba(0,0,0,0.3)
 		-webkit-box-shadow: 0 5px 5px rgba(0,0,0,0.3)
@@ -55,7 +55,7 @@
 			font-weight: 500
 			text-decoration: none
 			position: relative
-			margin: 5px 0
+			margin-bottom: 15px
 
 /* Header */
 .header
